fix responsiveness on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,120 @@
-*,
-*::before,
-*::after {
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
+nav {
+  color: black;
+  background-color: #ffffff;
+  box-shadow: none;
 }
 
-.navbar-brand img {
-  height: 28px;
-  margin: 0;
-  max-width: 100%;
+nav li a{
+  color: black;
 }
 
-.col-xs-4{
-  padding-right: 0px;
-  padding-left: 15px;
-  margin: none;
+i.material-icons {
+  color: black;
 }
 
-.col-xs-8 {
+img {
+  width: 100%;
+}
+
+#sub1 {
   background-color: blue;
-  padding: none;
-  margin: none;
-  width: 64%;
+  color: white;
+  float: left;
+  clear: right;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+#sub2 {
+  background-color: teal;
+  color: white;
+}
+
+div .col.s12.m6.l2, div .col.s12.m8.l8 {
+  padding: 0em;
+}
+
+.row {
+  padding: 0em;
+}
+
+/*\=============================================================================
+----------------------------MEDIA QUERIES-------------------------------------
+==============================================================================*/
+
+@media screen and (min-width:199px) {
+  #sub1 {
+    width: 50%;
+    min-height: 7.5em;
+    padding: 0em;
+    margin: 0em;
+  }
+
+  #top {
+    float: left;
+    clear: both;
+    padding: 0em;
+    margin: 0em;
+  }
+
+  #bottom {
+    float: left;
+    clear: both;
+    padding: 0em;
+    margin: 0em;
+  }
+
+  #sub2 {
+    width: 50%;
+    float: right;
+    min-height: 7.5em;
+    padding: 0em;
+    margin: 0em;
+  }
+
+  .row.col{
+    padding: 0em;
+    margin: 0em;
+  }
+}
+
+@media screen and (min-width:599px) {
+
+  #top {
+    width: 50%;
+    float: left;
+    clear: both;
+    padding: 0em;
+    margin: 0em;
+  }
+
+  #sub1 {
+    width: 50%;
+    margin-bottom: 10px;
+    float: left;
+    clear: left;
+  }
+
+  #bottom {
+    width: 40%;
+    float: right;
+    padding: 0em;
+    margin: 0em;
+  }
+
+  #sub2 {
+    width: 49%;
+    margin-bottom: 10px;
+    float: right;
+    clear: right;
+  }
+
+  div .col.s12.m8.l8 {
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .l2 img {
+    width: 479.98px;
+    height: 104px;
+  }
 }
